5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4150/executions/1800_2566.log
== TEST (2019-06-12 10:41:42) 
-- CODE:
from numpy import*

v = array(eval(input("digite: ")))

x = zeros(6, dtype=int)

for i in range(size(v)):
	if v[i] = 2:
		v[0] = v[0]+1
	elif v[i] = 3
		v[1]=v[1]+1
	elif v[i] = 4
		v[2]=v[2]+1
	elif v[i]=5
		v[3]=v[3]+1
	elif v[i]=6
		v[4]=v[4]+1
	elif v[i]=7
		v[5]=v[5]+1
print(v)
		
	
-- ERROR:
File "XXXX", line 8
    if v[i] = 2:
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 10:43:15) 
-- CODE:
from numpy import*

v = array(eval(input("digite: ")))

x = zeros(6, dtype=int)

for i in range(size(v)):
	if i = 2:
		v[0] = v[0]+1
	elif i = 3
		v[1]=v[1]+1
	elif i = 4
		v[2]=v[2]+1
	elif i=5
		v[3]=v[3]+1
	elif i=6
		v[4]=v[4]+1
	elif i=7
		v[5]=v[5]+1
print(v)
		
	
-- ERROR:
File "XXXX", line 8
    if i = 2:
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 10:43:52) 
-- CODE:
from numpy import*

v = array(eval(input("digite: ")))

x = zeros(6, dtype=int)

for i in range(size(v)):
	if i == 2:
		v[0] = v[0]+1
	elif i == 3
		v[1]=v[1]+1
	elif i == 4
		v[2]=v[2]+1
	elif i==5
		v[3]=v[3]+1
	elif i==6
		v[4]=v[4]+1
	elif i==7
		v[5]=v[5]+1
print(v)
		
	
-- ERROR:
File "XXXX", line 10
    elif i == 3
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 10:44:34) 
-- CODE:
from numpy import*

v = array(eval(input("digite: ")))

x = zeros(6, dtype=int)

for i in range(size(v)):
	if v[i] == 2:
		v[0] = v[0]+1
	elif v[i] == 3:
		v[1]=v[1]+1
	elif v[i] == 4:
		v[2]=v[2]+1
	elif v[i]==5:
		v[3]=v[3]+1
	elif v[i]==6:
		v[4]=v[4]+1
	elif v[i]==7:
		v[5]=v[5]+1
print(v)
		
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 10:46:46) 
-- CODE:
from numpy import*

v = array(eval(input("digite: ")))

x = zeros(6, dtype=int)

for i in range(size(v)):
	if v[i] == 2:
		x[0] = x[0]+1
	elif v[i] == 3:
		x[1]=x[1]+1
	elif v[i] == 4:
		x[2]=x[2]+1
	elif v[i] == 5:
		x[3]=x[3]+1
	elif v[i] == 6:
		x[4]=x[4]+1
	elif v[i] == 7:
		x[5]=x[5]+1
print(x)
		
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 10:53:53) 
-- CODE:
from numpy import*

v = array(eval(input("digite: ")))

x = zeros(6, dtype=int)
y =zeros(6, dtype=int)

for i in range(size(v)):
	if v[i] == 2:
		x[0] = x[0]+1
	elif v[i] == 3:
		x[1]=x[1]+1
	elif v[i] == 4:
		x[2]=x[2]+1
	elif v[i] == 5:
		x[3]=x[3]+1
	elif v[i] == 6:
		x[4]=x[4]+1
	elif v[i] == 7:
		x[5]=x[5]+1
	
	for i in range(size(x)):
		
		
	
-- ERROR:
File "XXXX", line 26
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 10:54:06) 
-- CODE:
from numpy import*

v = array(eval(input("digite: ")))

x = zeros(6, dtype=int)
y =zeros(6, dtype=int)

for i in range(size(v)):
	if v[i] == 2:
		x[0] = x[0]+1
	elif v[i] == 3:
		x[1]=x[1]+1
	elif v[i] == 4:
		x[2]=x[2]+1
	elif v[i] == 5:
		x[3]=x[3]+1
	elif v[i] == 6:
		x[4]=x[4]+1
	elif v[i] == 7:
		x[5]=x[5]+1
	
print(x)
		
		
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 11:06:31) 
-- CODE:
from numpy import*

v = array(eval(input("digite: ")))

x = zeros(6, dtype=int)
y =zeros(6, dtype=int)

for i in range(size(v)):
	if v[i] == 2:
		x[0] = x[0]+1
	elif v[i] == 3:
		x[1]=x[1]+1
	elif v[i] == 4:
		x[2]=x[2]+1
	elif v[i] == 5:
		x[3]=x[3]+1
	elif v[i] == 6:
		x[4]=x[4]+1
	elif v[i] == 7:
		x[5]=x[5]+1
	
	
		
		
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 11:07:08) 
-- CODE:
from numpy import*

v = array(eval(input("digite: ")))

x = zeros(6, dtype=int)
y =zeros(6, dtype=int)

for i in range(size(v)):
	if v[i] == 2:
		x[0] = x[0]+1
	elif v[i] == 3:
		x[1]=x[1]+1
	elif v[i] == 4:
		x[2]=x[2]+1
	elif v[i] == 5:
		x[3]=x[3]+1
	elif v[i] == 6:
		x[4]=x[4]+1
	elif v[i] == 7:
		x[5]=x[5]+1
	
print(x)
		
		
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 11:07:22) 
-- CODE:
from numpy import*

v = array(eval(input("digite: ")))

x = zeros(6, dtype=int)
y =zeros(6, dtype=int)

for i in range(size(v)):
	if v[i] == 2:
		x[0] = x[0]+1
	elif v[i] == 3:
		x[1]=x[1]+1
	elif v[i] == 4:
		x[2]=x[2]+1
	elif v[i] == 5:
		x[3]=x[3]+1
	elif v[i] == 6:
		x[4]=x[4]+1
	elif v[i] == 7:
		x[5]=x[5]+1
	
print(x)
		
		
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 11:09:04) 
-- CODE:
from numpy import*

v = array(eval(input("digite: ")))

x = zeros(6, dtype=int)
y =zeros(6, dtype=int)

for i in range(size(v)):
	if v[i] == 2:
		x[0] = x[0]+1
	elif v[i] == 3:
		x[1]=x[1]+1
	elif v[i] == 4:
		x[2]=x[2]+1
	elif v[i] == 5:
		x[3]=x[3]+1
	elif v[i] == 6:
		x[4]=x[4]+1
	elif v[i] == 7:
		x[5]=x[5]+1
	
print(x)
		
		
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 11:16:53) 
-- CODE:
from numpy import*

v = array(eval(input("digite: ")))

x = zeros(6, dtype=int)
y =zeros(6, dtype=int)

for i in range(size(v)):
	if v[i] == 2:
		x[0] = x[0]+1
	elif v[i] == 3:
		x[1]=x[1]+1
	elif v[i] == 4:
		x[2]=x[2]+1
	elif v[i] == 5:
		x[3]=x[3]+1
	elif v[i] == 6:
		x[4]=x[4]+1
	elif v[i] == 7:
		x[5]=x[5]+1
	
print(x)
		
		
	
-- EXECUTION TIME:
1.07656
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
[3 0 0 3 4 6]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
[1 2 4 5 5 8]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
[2 1 3 1 2 4]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 11:17:21) 
-- CODE:
from numpy import*

v = array(eval(input("digite: ")))

x = zeros(6, dtype=int)
y =zeros(6, dtype=int)

for i in range(size(v)):
	if v[i] == 2:
		x[0] = x[0]+1
	elif v[i] == 3:
		x[1]=x[1]+1
	elif v[i] == 4:
		x[2]=x[2]+1
	elif v[i] == 5:
		x[3]=x[3]+1
	elif v[i] == 6:
		x[4]=x[4]+1
	elif v[i] == 7:
		x[5]=x[5]+1
	
print(x)
		
		
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 13:34:46) 
-- CODE:
from numpy import*

v = array(eval(input("digite: ")))

x = zeros(6, dtype=int)
s = 0 
t = 0
q = 0
qui = 0 
sex = 0 
sab = 0


for i in range(size(v)):
	if v[i] == 2:
		s = s + 1
	elif v[i] == 3:
		t = t + 1
	elif v[i] == 4:
		q = q + 1
	elif v[i] == 5:
		qui= qui + 1
	elif v[i] == 6:
		sex = sex + 1
	elif v[i] == 7:
		sab = sab + 1
	
x[0] = round(s/size(v)*100,1)
x[1] = round(t/size(v)*100,1)
x[2] = round(q/size(v)*100,1)
x[3] = round (qui/size(v)*100,1)
x[4] = round(sex/size(v)*100,1)
x[5] = round (sab/size(v)*100,1)
print(a)
		
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 13:35:25) 
-- CODE:
from numpy import*

v = array(eval(input("digite: ")))

x = zeros(6, dtype=int)
s = 0 
t = 0
q = 0
qui = 0 
sex = 0 
sab = 0


for i in range(size(v)):
	if v[i] == 2:
		s = s + 1
	elif v[i] == 3:
		t = t + 1
	elif v[i] == 4:
		q = q + 1
	elif v[i] == 5:
		qui= qui + 1
	elif v[i] == 6:
		sex = sex + 1
	elif v[i] == 7:
		sab = sab + 1
	
x[0] = round(s/size(v)*100,1)
x[1] = round(t/size(v)*100,1)
x[2] = round(q/size(v)*100,1)
x[3] = round (qui/size(v)*100,1)
x[4] = round(sex/size(v)*100,1)
x[5] = round (sab/size(v)*100,1)
print(x)
		
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 13:35:58) 
-- CODE:
from numpy import*

v = array(eval(input("digite: ")))

x = zeros(6, dtype=int)
s = 0 
t = 0
q = 0
qui = 0 
sex = 0 
sab = 0


for i in range(size(v)):
	if v[i] == 2:
		s = s + 1
	elif v[i] == 3:
		t = t + 1
	elif v[i] == 4:
		q = q + 1
	elif v[i] == 5:
		qui= qui + 1
	elif v[i] == 6:
		sex = sex + 1
	elif v[i] == 7:
		sab = sab + 1
	
x[0] = round(s/size(v)*100,1)
x[1] = round(t/size(v)*100,1)
x[2] = round(q/size(v)*100,1)
x[3] = round (qui/size(v)*100,1)
x[4] = round(sex/size(v)*100,1)
x[5] = round (sab/size(v)*100,1)
print(x)
		
	
-- EXECUTION TIME:
1.03837
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
[18  0  0 18 25 37]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
[ 4  8 16 20 20 32]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
[15  7 23  7 15 30]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 13:36:11) 
-- CODE:
from numpy import*

v = array(eval(input("digite: ")))

x = zeros(6, dtype=int)
s = 0 
t = 0
q = 0
qui = 0 
sex = 0 
sab = 0


for i in range(size(v)):
	if v[i] == 2:
		s = s + 1
	elif v[i] == 3:
		t = t + 1
	elif v[i] == 4:
		q = q + 1
	elif v[i] == 5:
		qui= qui + 1
	elif v[i] == 6:
		sex = sex + 1
	elif v[i] == 7:
		sab = sab + 1
	
x[0] = round(s/size(v)*100,1)
x[1] = round(t/size(v)*100,1)
x[2] = round(q/size(v)*100,1)
x[3] = round (qui/size(v)*100,1)
x[4] = round(sex/size(v)*100,1)
x[5] = round (sab/size(v)*100,1)
print(x)
		
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 13:36:48) 
-- CODE:
from numpy import*

v = array(eval(input("digite: ")))

x = zeros(6, dtype=float)
s = 0 
t = 0
q = 0
qui = 0 
sex = 0 
sab = 0


for i in range(size(v)):
	if v[i] == 2:
		s = s + 1
	elif v[i] == 3:
		t = t + 1
	elif v[i] == 4:
		q = q + 1
	elif v[i] == 5:
		qui= qui + 1
	elif v[i] == 6:
		sex = sex + 1
	elif v[i] == 7:
		sab = sab + 1
	
x[0] = round(s/size(v)*100,1)
x[1] = round(t/size(v)*100,1)
x[2] = round(q/size(v)*100,1)
x[3] = round (qui/size(v)*100,1)
x[4] = round(sex/size(v)*100,1)
x[5] = round (sab/size(v)*100,1)
print(x)
		
	
-- EXECUTION TIME:
1.26194
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
[18.8  0.   0.  18.8 25.  37.5]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
[ 4.  8. 16. 20. 20. 32.]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
[15.4  7.7 23.1  7.7 15.4 30.8]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 13:40:51) 
-- CODE:
from numpy import*

v = array(eval(input("digite: ")))

x = zeros(6, dtype=float)
s = 0 
t = 0
q = 0
qui = 0 
sex = 0 
sab = 0


for i in range(size(v)):
	if v[i] == 2:
		s = s + 1
	elif v[i] == 3:
		t = t + 1
	elif v[i] == 4:
		q = q + 1
	elif v[i] == 5:
		qui= qui + 1
	elif v[i] == 6:
		sex = sex + 1
	elif v[i] == 7:
		sab = sab + 1
	
x[0] = round(s/size(v)*100,1)
x[1] = round(t/size(v)*100,1)
x[2] = round(q/size(v)*100,1)
x[3] = round (qui/size(v)*100,1)
x[4] = round(sex/size(v)*100,1)
x[5] = round (sab/size(v)*100,1)
print(x)
		
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 13:41:16) 
-- CODE:
from numpy import*

v = array(eval(input("digite: ")))

x = zeros(6, dtype=float)
s = 0 
t = 0
q = 0
qui = 0 
sex = 0 
sab = 0


for i in range(size(v)):
	if v[i] == 2:
		s = s + 1
	elif v[i] == 3:
		t = t + 1
	elif v[i] == 4:
		q = q + 1
	elif v[i] == 5:
		qui= qui + 1
	elif v[i] == 6:
		sex = sex + 1
	elif v[i] == 7:
		sab = sab + 1
	
x[0] = round(s/size(v)*100,1)
x[1] = round(t/size(v)*100,1)
x[2] = round(q/size(v)*100,1)
x[3] = round (qui/size(v)*100,1)
x[4] = round(sex/size(v)*100,1)
x[5] = round (sab/size(v)*100,1)
print(x)
		
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
